--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     ports:
       - "${POSTGRES_DB_PORT}:5432"
     volumes:
-      - psql_volume_bp:/var/lib/postgresql/data
+      - discord-data:/var/lib/postgresql/data
 
 volumes:
-  psql_volume_bp:
+  discord-data:
